# ratui_lib

./: Cargo.toml  README.md
src/: animation.rs  layout.rs  lib.rs  widgets.rs
