[package]
name = "ratui_lib"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A high-level wrapper around ratatui providing reusable components and utilities for terminal user interfaces"
authors = ["rakki194"]
repository = "https://github.com/rakki194/ratui_lib"
documentation = "https://docs.rs/ratui_lib"
readme = "README.md"
keywords = ["tui", "terminal", "ui", "widgets", "ratatui"]
categories = ["command-line-interface", "gui"]

[dependencies]
anyhow = { version = "1.0.96", features = ["backtrace"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
rand = "0.9.0"
thiserror = "2.0.11"

[lib]
name = "ratui_lib"
path = "src/lib.rs"
